--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "mastra build",
     "start": "mastra start",
     "test:idea": "tsx src/test/testIdeaGeneration.ts",
+    "test:rag": "tsx src/test/testRAGSetup.ts",
     "type-check": "tsc --noEmit"
   },
   "keywords": [],
@@ -19,22 +20,23 @@
     "node": ">=20.9.0"
   },
   "dependencies": {
-    "@mastra/rag": "latest",
-    "@mastra/pinecone": "latest",
-    "@ai-sdk/openai": "latest",
-    "dotenv": "^16.0.0",
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/google": "^1.2.22",
+    "@ai-sdk/openai": "latest",
     "@mastra/core": "^0.10.12",
     "@mastra/libsql": "^0.11.0",
     "@mastra/loggers": "^0.10.3",
     "@mastra/memory": "^0.11.2",
+    "@mastra/pinecone": "latest",
+    "@mastra/rag": "latest",
+    "ai": "^4.3.17",
+    "dotenv": "^16.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "mastra": "^0.10.12",
-    "typescript": "^5.0.0",
-    "tsx": "^4.0.0"
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0"
   }
 }
