--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 GOOGLE_GENERATIVE_AI_API_KEY=AIz...
 
- 
+ OPENAI_API_KEY=
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 PINECONE_API_KEY=your_pinecone_api_key_here
 PINECONE_INDEX_NAME=product-maestro-knowledge
