--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mastra/core": "^0.10.12",
     "@mastra/libsql": "^0.11.0",
     "@mastra/loggers": "^0.10.3",
+    "@mastra/mcp": "^0.10.6",
     "@mastra/memory": "^0.11.2",
     "@mastra/pinecone": "latest",
     "@mastra/rag": "latest",
