feat: add visual design agent and workflow
This commit introduces the visual design agent, which is responsible for generating visual designs for web pages based on user stories.

The agent is built using the @ai-sdk/google library and zod for schema validation.

A new workflow, visualDesignWorkflow, has been added to orchestrate the process of generating a visual design from a product idea.

The commit also includes a test file for the visual design workflow and updates the package.json with a new test script.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "mastra start",
     "test:idea": "tsx src/test/testIdeaGeneration.ts",
     "test:rag": "tsx src/test/testRAGSetup.ts",
+    "test:visual-design": "tsx src/test/testVisualDesign.ts",
     "type-check": "tsc --noEmit"
   },
   "keywords": [],
