feat : PRD agent complete

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 GOOGLE_GENERATIVE_AI_API_KEY=AIz...
 
- OPENAI_API_KEY=
+OPENAI_API_KEY=
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 PINECONE_API_KEY=your_pinecone_api_key_here
 PINECONE_INDEX_NAME=product-maestro-knowledge
 PINECONE_ENVIRONMENT=us-east-1
+
+  NOTION_API_KEY=your_notion_integration_api_key
+  NOTION_PRD_DATABASE_ID=your_notion_database_id
