--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "test:rag": "tsx src/test/testRAGSetup.ts",
     "test:prd": "tsx src/test/testPRDGeneration.ts",
     "test:sprint": "tsx src/test/testSprintPlanner.ts",
+    "test:visual": "tsx src/test/testVisualDesign.ts",
+    "miro:setup": "tsx src/scripts/miroSimpleAuth.ts",
+    "miro:auto": "tsx src/scripts/miroRedirectHandler.ts",
+    "miro:token": "tsx src/scripts/miroSimpleAuth.ts",
+    "miro:test": "tsx src/scripts/testMiroAPI.ts",
+    "visual:demo": "tsx src/scripts/testVisualDesignEndToEnd.ts",
     "type-check": "tsc --noEmit"
   },
   "keywords": [],
