--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-maestro",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "description": "AI-powered no-code IDE for product managers",
