--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.0.0",
     "ai": "^4.3.17",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
